# GameToolsLib

./: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.run/: Only Debug Test.run.xml  Run Integration Tests.run.xml  Run Unit Tests.run.xml  example.run.xml
android/app/: build.gradle.kts
assets/locales/: de.json  debug_test_en.json  en.json
example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/assets/locales/: de.json  debug_test_en.json  en.json
example/integration_test/: native_tests.dart  plugin_integration_test.dart
example/integration_test/helper/: test_widgets.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: some_test.dart
example/windows/: CMakeLists.txt
ffi/: CMakeLists.txt
ffi/code/: CMakeLists.txt  exports.h  ffi_exports.def
ffi/code/native_window/: CMakeLists.txt  native_window.cpp  native_window.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: game_tools_lib.dart
lib/data/: json_asset.dart
linux/: CMakeLists.txt  game_tools_lib_plugin.cc  game_tools_lib_plugin_private.h
linux/runner/: my_application.cc
linux/test/: game_tools_lib_plugin_test.cc
macos/: game_tools_lib.podspec
macos/Classes/: GameToolsLibPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: event_state_test.dart  game_tools_lib_core_test.dart  utils_test.dart  widget_test.dart
test/helper/: test_game_manager.dart  test_helper.dart  test_widgets.dart
test/test_data/: be_utf16.txt  le_utf16.txt  utf8.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt  game_tools_lib_plugin.cpp  game_tools_lib_plugin.h  game_tools_lib_plugin_c_api.cpp
windows/runner/: Runner.rc  main.cpp
windows/test/: game_tools_lib_plugin_test.cpp
(+150 files in other folders)
